Modify : 모바일 레이아웃 및 스타일 수정

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                 <div class="skill-chip">Sass</div>
                 <div class="skill-chip">Yarn</div>
                 <div class="skill-chip">ReactQuery</div>
+                <div class="skill-chip">Zustand</div>
               </div>
             </div>
           </div>
@@ -164,6 +165,12 @@
                   사용으로 사용자로 하여금 한 페이지에서 머물고 있는 것처럼
                   느끼도록 개발
                 </li>
+                <li class="project-card-paragraph-description-list">
+                  zustand를 store에 각 step마다 임시 저장 로직 구현
+                </li>
+                <li class="project-card-paragraph-description-list">
+                  이력서 작성 완성률 53% -> 86%로 개선
+                </li>
               </ul>
             </div>
             <div class="project-card-paragraph-item">
@@ -171,7 +178,7 @@
               <div class="project-card-paragraph-skill-container">
                 <div class="skill-chip">TypeScript</div>
                 <div class="skill-chip">Next.js</div>
-                <div class="skill-chip">Sass</div>
+                <div class="skill-chip">Zustand</div>
                 <div class="skill-chip">ReactQuery</div>
               </div>
             </div>
@@ -268,7 +275,7 @@
             <h3 class="card-title">나사렛대학교</h3>
             <div class="duration">
               2016.03 ~ 2022.02
-              <span class="status-chip-done">졸업</span>
+              <span>졸업</span>
             </div>
           </div>
           <p class="card-description">
@@ -282,17 +289,87 @@
 
         <article class="card screen-animation">
           <div class="card-title-container">
-            <h3 class="card-title">웹 개발자 양성 과정 수료</h3>
+            <h3 class="card-title">
+              <a
+                class="link-container"
+                href="https://elice.io/ko"
+                target="_blank"
+              >
+                <img class="corp-logo" src="/src/image/elice_logo.webp" />
+              </a>
+              웹 개발자 양성 과정 수료
+            </h3>
             <span class="duration">2021.09.14 ~ 2022.03.15</span>
           </div>
+          <div class="card-paragraph-title">Description</div>
+          <div class="card-paragraph-description">
+            Elice에서 진행한 프론트엔드,백엔드.ai를 교육하는 교육 과정
+          </div>
+          <div class="project-card-paragraph-title">What I did</div>
+          <ul class="project-card-paragraph-description">
+            <li class="project-card-paragraph-description-list">
+              6개월이라는 시간 동안, 3개의 팀 프로젝트를 진행
+            </li>
+            <li class="project-card-paragraph-description-list">
+              스크럼 방식의 팀 프로젝트 경험 및 Git을 이용한 팀 프로젝트 경험
+            </li>
+            <li class="project-card-paragraph-description-list">
+              프론트엔드를 혼자 담당함으로서 프론트의 전반적인 모든 부분을
+              경험해 봄
+            </li>
+          </ul>
+          <div class="card-paragraph-title">Skill stack</div>
+          <div class="card-paragraph-description">
+            <div class="card-paragraph-skill-container">
+              <div class="skill-chip">JavaScript</div>
+              <div class="skill-chip">React</div>
+              <div class="skill-chip">Python</div>
+              <div class="skill-chip">Django</div>
+              <div class="skill-chip">Flask</div>
+            </div>
+          </div>
+        </article>
+
+        <article class="card screen-animation">
+          <div class="card-title-container">
+            <h3 class="card-title">
+              <a
+                class="link-container"
+                href="https://www.wanted.co.kr/jobsfeed"
+                target="_blank"
+              >
+                <img class="corp-logo" src="/src/image/wanted_logo.jpeg" />
+              </a>
+
+              프론트엔드 엔지니어 양성 과정 수료
+            </h3>
+            <span class="duration">2022.05.03 ~ 2022.06.05</span>
+          </div>
+          <div class="card-paragraph-title">Description</div>
+          <div class="card-paragraph-description">원티드에서 진행한 프론트엔드 집중 교육 과정</div>
+          <div class="project-card-paragraph-title">What I did</div>
+          <ul class="project-card-paragraph-description">
+            <li class="project-card-paragraph-description-list">
+              React와 TypeScript에 대한 이해도를 높임
+            </li>
+            <li class="project-card-paragraph-description-list">
+              sementic한 HTML 작성에 대해 배움
+            </li>
+              EsLint, StyleLint를 통한 가독성 있는 코드 작성법을 익히고 세팅
+              방법을 배움
+            </li>
+            <li class="project-card-paragraph-description-list">
+            최대한 재사용성을 높일 수 있는 방법에 대해 고민하는 습관을 가짐
+            </li>
+          </ul>
           <div class="card-paragraph-title">Skill stack</div>
           <div class="card-paragraph-description">
             <div class="card-paragraph-skill-container">
               <div class="skill-chip">TypeScript</div>
-              <div class="skill-chip">Next.js</div>
+              <div class="skill-chip">React</div>
               <div class="skill-chip">Sass</div>
-              <div class="skill-chip">Yarn</div>
-              <div class="skill-chip">ReactQuery</div>
+              <div class="skill-chip">EsLint</div>
+              <div class="skill-chip">Prettier</div>
             </div>
           </div>
         </article>
