Modify : 각 section에 id 추가

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/src/index.scss" />
   </head>
   <body>
-    <header class="header-container">dd</header>
+    <header class="header-container"></header>
     <main class="main-container">
       <h1 class="title screen-animation">
         안녕하세요
@@ -22,7 +22,7 @@
         주도적으로 업무하는 환경을 선호하며, 배우는 것을 즐깁니다.
       </p>
 
-      <section class="section-container">
+      <section id="career-section" class="section-container">
         <h2 class="section-title">경력</h2>
         <article class="card screen-animation">
           <div class="card-title-container">
@@ -46,7 +46,7 @@
         </article>
       </section>
 
-      <section class="section-container">
+      <section id="project-section" class="section-container">
         <div class="section-title">프로젝트</div>
         <div class="project-corp-title">잡코리아</div>
         <article class="project-card screen-animation">
@@ -231,7 +231,7 @@
         </article>
       </section>
 
-      <section class="section-container">
+      <section id="experience-section" class="section-container">
         <div class="section-title">활동</div>
 
         <article class="card screen-animation">
@@ -264,11 +264,11 @@
           </div>
         </article>
       </section>
-      <section class="section-container">
+      <section id="skill-section" class="section-container">
         <div class="section-title">기술</div>
       </section>
 
-      <section class="section-no-gap-container">
+      <section id="edu-section" class="section-no-gap-container">
         <div class="section-title">교육</div>
         <article class="card screen-animation">
           <div class="card-title-container">
