Add : 문자 메세지 기능

--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
     <link rel="stylesheet" href="/src/index.scss" />
   </head>
   <body>
-    <header class="header-container">
-      <button class="pdf-button">PDF 저장</button>
-    </header>
+    <header class="header-container"></header>
     <main class="main-container">
+      <aside class="aside-container">
+        <button class="pdf-button">
+          <img src="/src/image/pdf_logo.png" />
+          PDF 다운로드
+        </button>
+        <a
+          href="sms:01091433664?body=안녕하세요%20이력서%20보고%20연락드립니다."
+          >문자 보내기</a
+        >
+      </aside>
       <h1 class="title screen-animation">
         안녕하세요
         <br />
