Modify : style 경로 오류 수정

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FE Developer 김형석</title>
-    <link rel="stylesheet" href="/src/index.scss" />
+    <link rel="stylesheet" href="src/index.scss" />
   </head>
   <body>
     <header class="header-container"></header>
     <main class="main-container">
       <aside class="aside-container">
         <button class="pdf-button">
-          <img src="/src/image/pdf_logo.png" />
+          <img src="src/image/pdf_logo.png" />
           PDF 다운로드
         </button>
         <a
@@ -37,7 +37,7 @@
         <article class="card screen-animation">
           <div class="card-title-container">
             <h3 class="card-title">
-              <img class="corp-logo" src="/src/image/jobkorea_logo.png" />
+              <img class="corp-logo" src="src/image/jobkorea_logo.png" />
               잡코리아
             </h3>
             <div class="position">
@@ -247,7 +247,7 @@
         <article class="card screen-animation">
           <div class="card-title-container">
             <h3 class="card-title">
-              <img class="corp-logo" src="/src/image/axis_logo.png" />
+              <img class="corp-logo" src="src/image/axis_logo.png" />
               react-multi-email
               <a
                 class="link-container"
@@ -256,7 +256,7 @@
               >
                 <img
                   class="github-small-logo"
-                  src="/src/image/github_logo.png"
+                  src="src/image/github_logo.png"
                 />
               </a>
             </h3>
@@ -305,7 +305,7 @@
                 href="https://elice.io/ko"
                 target="_blank"
               >
-                <img class="corp-logo" src="/src/image/elice_logo.webp" />
+                <img class="corp-logo" src="src/image/elice_logo.webp" />
               </a>
               웹 개발자 양성 과정 수료
             </h3>
@@ -348,7 +348,7 @@
                 href="https://www.wanted.co.kr/jobsfeed"
                 target="_blank"
               >
-                <img class="corp-logo" src="/src/image/wanted_logo.jpeg" />
+                <img class="corp-logo" src="src/image/wanted_logo.jpeg" />
               </a>
 
               프론트엔드 엔지니어 양성 과정 수료
@@ -407,7 +407,7 @@
         <article class="card">
           <div class="card-title-container">
             <h3 class="card-title">
-              <img class="corp-logo" src="/src/image/jobkorea_logo.png" />
+              <img class="corp-logo" src="src/image/jobkorea_logo.png" />
               잡코리아
             </h3>
             <div class="position">
@@ -617,7 +617,7 @@
         <article class="card">
           <div class="card-title-container">
             <h3 class="card-title">
-              <img class="corp-logo" src="/src/image/axis_logo.png" />
+              <img class="corp-logo" src="src/image/axis_logo.png" />
               react-multi-email
               <a
                 class="link-container"
@@ -626,7 +626,7 @@
               >
                 <img
                   class="github-small-logo"
-                  src="/src/image/github_logo.png"
+                  src="src/image/github_logo.png"
                 />
               </a>
             </h3>
@@ -675,7 +675,7 @@
                 href="https://elice.io/ko"
                 target="_blank"
               >
-                <img class="corp-logo" src="/src/image/elice_logo.webp" />
+                <img class="corp-logo" src="src/image/elice_logo.webp" />
               </a>
               웹 개발자 양성 과정 수료
             </h3>
@@ -718,7 +718,7 @@
                 href="https://www.wanted.co.kr/jobsfeed"
                 target="_blank"
               >
-                <img class="corp-logo" src="/src/image/wanted_logo.jpeg" />
+                <img class="corp-logo" src="src/image/wanted_logo.jpeg" />
               </a>
 
               프론트엔드 엔지니어 양성 과정 수료
@@ -758,6 +758,6 @@
         </article>
       </section>
     </div>
-    <script src="/src/index.ts" type="module"></script>
+    <script src="src/index.ts" type="module"></script>
   </body>
 </html>
