--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/index.scss" />
+    <link rel="stylesheet" href="index.scss" />
     <title>FE Developer 김형석</title>
   </head>
   <body>
@@ -11,7 +11,7 @@
     <main class="main-container">
       <aside class="aside-container">
         <button class="pdf-button">
-          <img src="src/image/pdf_logo.png" />
+          <img src="image/pdf_logo.png" />
           PDF 다운로드
         </button>
         <a
@@ -37,7 +37,7 @@
         <article class="card screen-animation">
           <div class="card-title-container">
             <h3 class="card-title">
-              <img class="corp-logo" src="src/image/jobkorea_logo.png" />
+              <img class="corp-logo" src="image/jobkorea_logo.png" />
               잡코리아
             </h3>
             <div class="position">
@@ -247,17 +247,14 @@
         <article class="card screen-animation">
           <div class="card-title-container">
             <h3 class="card-title">
-              <img class="corp-logo" src="src/image/axis_logo.png" />
+              <img class="corp-logo" src="image/axis_logo.png" />
               react-multi-email
               <a
                 class="link-container"
                 href="https://github.com/axisj/react-multi-email"
                 target="_blank"
               >
-                <img
-                  class="github-small-logo"
-                  src="src/image/github_logo.png"
-                />
+                <img class="github-small-logo" src="image/github_logo.png" />
               </a>
             </h3>
           </div>
@@ -305,7 +302,7 @@
                 href="https://elice.io/ko"
                 target="_blank"
               >
-                <img class="corp-logo" src="src/image/elice_logo.webp" />
+                <img class="corp-logo" src="image/elice_logo.webp" />
               </a>
               웹 개발자 양성 과정 수료
             </h3>
@@ -348,7 +345,7 @@
                 href="https://www.wanted.co.kr/jobsfeed"
                 target="_blank"
               >
-                <img class="corp-logo" src="src/image/wanted_logo.jpeg" />
+                <img class="corp-logo" src="image/wanted_logo.jpeg" />
               </a>
 
               프론트엔드 엔지니어 양성 과정 수료
@@ -407,7 +404,7 @@
         <article class="card">
           <div class="card-title-container">
             <h3 class="card-title">
-              <img class="corp-logo" src="src/image/jobkorea_logo.png" />
+              <img class="corp-logo" src="image/jobkorea_logo.png" />
               잡코리아
             </h3>
             <div class="position">
@@ -617,17 +614,14 @@
         <article class="card">
           <div class="card-title-container">
             <h3 class="card-title">
-              <img class="corp-logo" src="src/image/axis_logo.png" />
+              <img class="corp-logo" src="image/axis_logo.png" />
               react-multi-email
               <a
                 class="link-container"
                 href="https://github.com/axisj/react-multi-email"
                 target="_blank"
               >
-                <img
-                  class="github-small-logo"
-                  src="src/image/github_logo.png"
-                />
+                <img class="github-small-logo" src="image/github_logo.png" />
               </a>
             </h3>
           </div>
@@ -675,7 +669,7 @@
                 href="https://elice.io/ko"
                 target="_blank"
               >
-                <img class="corp-logo" src="src/image/elice_logo.webp" />
+                <img class="corp-logo" src="image/elice_logo.webp" />
               </a>
               웹 개발자 양성 과정 수료
             </h3>
@@ -718,7 +712,7 @@
                 href="https://www.wanted.co.kr/jobsfeed"
                 target="_blank"
               >
-                <img class="corp-logo" src="src/image/wanted_logo.jpeg" />
+                <img class="corp-logo" src="image/wanted_logo.jpeg" />
               </a>
 
               프론트엔드 엔지니어 양성 과정 수료
@@ -758,6 +752,6 @@
         </article>
       </section>
     </div>
-    <script src="src/index.ts" type="module"></script>
+    <script src="index.ts" type="module"></script>
   </body>
 </html>
