Modify : 하단 햄버거 메뉴 스타일  수정

--- a/index.html
+++ b/index.html
@@ -10,15 +10,36 @@
   <body>
     <header class="header-container"></header>
     <main class="main-container">
+      <button class="burger-menu-button">
+        <img src="src/image/burger-menu_icon.png" />
+      </button>
       <aside class="aside-container">
-        <button class="pdf-button">
-          <img src="src/image/pdf_logo.png" />
-          PDF 다운로드
+        <button class="aside-item">
+          <img src="src/image/linkedin_icon.png" />
+          <a
+            href="https://www.linkedin.com/in/%ED%98%95%EC%84%9D-%EA%B9%80-901539232/"
+            >링크드인</a
+          >
         </button>
-        <a
-          href="sms:01091433664?body=안녕하세요%20이력서%20보고%20연락드립니다."
-          >문자 보내기</a
-        >
+        <button class="aside-item">
+          <img src="src/image/github_logo.png" />
+          <span>github</span>
+        </button>
+        <button class="aside-item">
+          <img src="src/image/sms_icon.webp" />
+          <a
+            href="sms:01091433664?body=안녕하세요%20이력서%20보고%20연락드립니다."
+            >문자 보내기</a
+          >
+        </button>
+        <button class="aside-item">
+          <img src="src/image/velog_icon.jpeg" />
+          <a href="https://velog.io/@seoku/posts">블로그</a>
+        </button>
+        <button class="aside-item">
+          <img src="src/image/pdf_icon.png" />
+          <span>PDF 다운로드</span>
+        </button>
       </aside>
       <h1 class="title screen-animation">
         안녕하세요
