--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <title>FE Developer 김형석</title>
   </head>
   <body>
+    <div id="modal"></div>
     <header class="header-container"></header>
     <main class="main-container">
       <button class="burger-menu-button">
         <img src="src/image/burger-menu_icon.png" />
       </button>
-      <aside class="aside-container">
+      <!-- <aside class="aside-container invisible">
         <button class="aside-item">
           <img src="src/image/linkedin_icon.png" />
           <a
@@ -40,7 +41,7 @@
           <img src="src/image/pdf_icon.png" />
           <span>PDF 다운로드</span>
         </button>
-      </aside>
+      </aside> -->
       <h1 class="title screen-animation">
         안녕하세요
         <br />
