Add : aside 동적 추가

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>FE Developer 김형석</title>
   </head>
   <body>
-    <div id="modal"></div>
+    <div id="modal" class="invisible"></div>
+    <div id="aside"></div>
     <header class="header-container"></header>
     <main class="main-container">
       <button class="burger-menu-button">
