Add : aside toggle 기능 추가

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="aside"></div>
     <header class="header-container"></header>
     <main class="main-container">
-      <button class="burger-menu-button">
+      <button class="aside-toggle-button">
         <img src="src/image/burger-menu_icon.png" />
       </button>
       <!-- <aside class="aside-container invisible">
