Modify : aside item create 메소드에 className 추가할 수 있도록 변경

--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
     <header class="header-container"></header>
     <main class="main-container">
       <button class="aside-toggle-button">
-        <img src="src/image/burger-menu_icon.png" />
+        <img src="/burger-menu_icon.png" />
       </button>
       <!-- <aside class="aside-container invisible">
         <button class="aside-item">
-          <img src="src/image/linkedin_icon.png" />
+          <img src="/linkedin_icon.png" />
           <a
             href="https://www.linkedin.com/in/%ED%98%95%EC%84%9D-%EA%B9%80-901539232/"
             >링크드인</a
           >
         </button>
         <button class="aside-item">
-          <img src="src/image/github_logo.png" />
+          <img src="/github_logo.png" />
           <span>github</span>
         </button>
         <button class="aside-item">
-          <img src="src/image/sms_icon.webp" />
+          <img src="/sms_icon.webp" />
           <a
             href="sms:01091433664?body=안녕하세요%20이력서%20보고%20연락드립니다."
             >문자 보내기</a
           >
         </button>
         <button class="aside-item">
-          <img src="src/image/velog_icon.jpeg" />
+          <img src="/velog_icon.jpeg" />
           <a href="https://velog.io/@seoku/posts">블로그</a>
         </button>
         <button class="aside-item">
-          <img src="src/image/pdf_icon.png" />
+          <img src="/pdf_icon.png" />
           <span>PDF 다운로드</span>
         </button>
       </aside> -->
@@ -61,7 +61,7 @@
         <article class="card screen-animation">
           <div class="card-title-container">
             <h3 class="card-title">
-              <img class="corp-logo" src="src/image/jobkorea_logo.png" />
+              <img class="corp-logo" src="/jobkorea_logo.png" />
               잡코리아
             </h3>
             <div class="position">
@@ -271,17 +271,14 @@
         <article class="card screen-animation">
           <div class="card-title-container">
             <h3 class="card-title">
-              <img class="corp-logo" src="src/image/axis_logo.png" />
+              <img class="corp-logo" src="/axis_logo.png" />
               react-multi-email
               <a
                 class="link-container"
                 href="https://github.com/axisj/react-multi-email"
                 target="_blank"
               >
-                <img
-                  class="github-small-logo"
-                  src="src/image/github_logo.png"
-                />
+                <img class="github-small-logo" src="/github_logo.png" />
               </a>
             </h3>
           </div>
@@ -329,7 +326,7 @@
                 href="https://elice.io/ko"
                 target="_blank"
               >
-                <img class="corp-logo" src="src/image/elice_logo.webp" />
+                <img class="corp-logo" src="/elice_logo.webp" />
               </a>
               웹 개발자 양성 과정 수료
             </h3>
@@ -372,7 +369,7 @@
                 href="https://www.wanted.co.kr/jobsfeed"
                 target="_blank"
               >
-                <img class="corp-logo" src="src/image/wanted_logo.jpeg" />
+                <img class="corp-logo" src="/wanted_logo.jpeg" />
               </a>
 
               프론트엔드 엔지니어 양성 과정 수료
@@ -431,7 +428,7 @@
         <article class="card">
           <div class="card-title-container">
             <h3 class="card-title">
-              <img class="corp-logo" src="src/image/jobkorea_logo.png" />
+              <img class="corp-logo" src="/jobkorea_logo.png" />
               잡코리아
             </h3>
             <div class="position">
@@ -641,17 +638,14 @@
         <article class="card">
           <div class="card-title-container">
             <h3 class="card-title">
-              <img class="corp-logo" src="src/image/axis_logo.png" />
+              <img class="corp-logo" src="/axis_logo.png" />
               react-multi-email
               <a
                 class="link-container"
                 href="https://github.com/axisj/react-multi-email"
                 target="_blank"
               >
-                <img
-                  class="github-small-logo"
-                  src="src/image/github_logo.png"
-                />
+                <img class="github-small-logo" src="/github_logo.png" />
               </a>
             </h3>
           </div>
@@ -699,7 +693,7 @@
                 href="https://elice.io/ko"
                 target="_blank"
               >
-                <img class="corp-logo" src="src/image/elice_logo.webp" />
+                <img class="corp-logo" src="/elice_logo.webp" />
               </a>
               웹 개발자 양성 과정 수료
             </h3>
@@ -742,7 +736,7 @@
                 href="https://www.wanted.co.kr/jobsfeed"
                 target="_blank"
               >
-                <img class="corp-logo" src="src/image/wanted_logo.jpeg" />
+                <img class="corp-logo" src="/wanted_logo.jpeg" />
               </a>
 
               프론트엔드 엔지니어 양성 과정 수료
