--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header-container"></header>
     <main id="main-container" class="main-container">
       <button class="aside-toggle-button">
-        <img src="/burger-menu_icon.png" />
+        <img src="/burger-menu_icon.png" alt="메뉴" />
       </button>
       <h1 class="title screen-animation">
         안녕하세요
@@ -36,7 +36,7 @@
         <article class="card screen-animation">
           <div class="card-title-container">
             <h3 class="card-title">
-              <img class="corp-logo" src="/jobkorea_logo.png" />
+              <img class="corp-logo" src="/jobkorea_logo.png" alt="잡코리아" />
               잡코리아
             </h3>
             <div class="position">
@@ -250,14 +250,18 @@
         <article class="card screen-animation">
           <div class="card-title-container">
             <h3 class="card-title">
-              <img class="corp-logo" src="/axis_logo.png" />
+              <img class="corp-logo" src="/axis_logo.png" alt="axis" />
               react-multi-email
               <a
                 class="link-container"
                 href="https://github.com/axisj/react-multi-email"
                 target="_blank"
               >
-                <img class="github-small-logo" src="/github_logo.png" />
+                <img
+                  class="github-small-logo"
+                  src="/github_logo.png"
+                  alt="github"
+                />
               </a>
             </h3>
           </div>
@@ -305,7 +309,7 @@
                 href="https://elice.io/ko"
                 target="_blank"
               >
-                <img class="corp-logo" src="/elice_logo.webp" />
+                <img class="corp-logo" src="/elice_logo.webp" alt="엘리스" />
               </a>
               웹 개발자 양성 과정 수료
             </h3>
@@ -348,7 +352,7 @@
                 href="https://www.wanted.co.kr/jobsfeed"
                 target="_blank"
               >
-                <img class="corp-logo" src="/wanted_logo.jpeg" />
+                <img class="corp-logo" src="/wanted_logo.jpeg" alt="원티드" />
               </a>
 
               프론트엔드 엔지니어 양성 과정 수료
