Modify : contact 영역 추가중

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
         주도적으로 업무하는 환경을 선호하며, 배우는 것을 즐깁니다.
       </p>
 
+      <section id="contact-section" class="section-container">
+        <div class="contact-title screen-animation">contact</div>
+        <ul class="contact-list">
+          <li class="contact-item">
+            <img src="/phone_icon.png" alt="전화번호" />
+            <span>010-xxxx-xxxx</span>
+          </li>
+        </ul>
+      </section>
+
       <section id="career-section" class="section-container">
         <h2 class="section-title screen-animation">경력</h2>
         <article class="card screen-animation">
