Modify : contact 영역 추가 및 클립보드 복사 기능 추가

--- a/index.html
+++ b/index.html
@@ -32,13 +32,52 @@
       </p>
 
       <section id="contact-section" class="section-container">
-        <div class="contact-title screen-animation">contact</div>
-        <ul class="contact-list">
-          <li class="contact-item">
-            <img src="/phone_icon.png" alt="전화번호" />
-            <span>010-xxxx-xxxx</span>
-          </li>
-        </ul>
+        <div class="screen-animation">
+          <div class="contact-title">contact</div>
+          <p class="contact-info">
+            텍스트 클릭시 클립보드에 복사됩니다. <br />
+            우측 하단의 메뉴에서 바로 동작시킬 수도 있습니다.
+          </p>
+          <ul class="contact-list">
+            <li class="contact-item">
+              <img
+                class="contact-item-icon"
+                src="/phone_icon.png"
+                alt="전화번호"
+              />
+              <span class="contact-list-item-text">010-xxxx-xxxx</span>
+            </li>
+            <li class="contact-item">
+              <img
+                class="contact-item-icon"
+                src="/email_icon.png"
+                alt="이메일"
+              />
+              <span class="contact-list-item-text">gudtjr3437@gmail.com</span>
+            </li>
+            <li class="contact-item">
+              <img
+                class="contact-item-icon"
+                src="/github_logo.png"
+                alt="github"
+              />
+              <span class="contact-list-item-text"
+                >https://github.com/HyeongSeoku</span
+              >
+            </li>
+
+            <li class="contact-item">
+              <img
+                class="contact-item-icon"
+                src="/velog_icon.jpeg"
+                alt="블로그"
+              />
+              <span class="contact-list-item-text"
+                >https://velog.io/@seoku</span
+              >
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section id="career-section" class="section-container">
