--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
               <div class="project-card-paragraph-title">Description</div>
               <div class="project-card-paragraph-description">
                 .NET 소스를 next.js , TyepScript를 이용하여 micro service
-                architecture 구조로 개발 진행했습니다 (Mobile,PC,WebView)
+                architecture 구조로 개발 진행했습니다 (Mobile,PC,WebView) 그 중
+                개인 서비스를 주력으로 담당하여 개발 및 배포 진행하였습니다.
               </div>
             </div>
             <div class="project-card-paragraph-item">
@@ -291,6 +292,49 @@
             </div>
           </div>
         </article>
+
+        <article class="project-card screen-animation">
+          <div class="project-card-title-container">
+            <h3 class="project-card-title">StoryBook 오류 수정 및 정리</h3>
+            <div class="position">
+              Frontend Developer
+              <span class="duration">(2023.05 ~ 2023.07)</span>
+            </div>
+          </div>
+          <div class="project-card-paragraph-container">
+            <div class="project-card-paragraph-item">
+              <div class="project-card-paragraph-title">Description</div>
+              <div class="project-card-paragraph-description">
+                알바몬 MO의 StoryBook이 존재했으나 생성된 컴포넌트들에 대해
+                정의를 안해두거나, 비즈니스 로직이 많이 얽혀있어 실행이 되지
+                않고 있었던 것을 컴포넌트들에 대해 정의하고, 비즈니스 로직이
+                얽힌 부분을 최대한 분리하거나 분리가 어려운 컴포넌트의 경우
+                storybook 내에서 타입에러라도 일어나서 알 수 있도록 조치
+              </div>
+            </div>
+            <div class="project-card-paragraph-item">
+              <div class="project-card-paragraph-title">What I did</div>
+              <ul class="project-card-paragraph-description">
+                <li class="project-card-paragraph-description-list">
+                  StoryBook 내에 잔존하는 오류 수정
+                </li>
+                <li class="project-card-paragraph-description-list">
+                  비즈니스 로직 결합도 높은 컴포넌트 비즈니스 로직 분리
+                </li>
+                <li class="project-card-paragraph-description-list">
+                  argTypes등을 이용하여 StoryBook 제어 높임
+                </li>
+              </ul>
+            </div>
+            <div class="project-card-paragraph-item">
+              <div class="project-card-paragraph-title">Skill stack</div>
+              <div class="project-card-paragraph-skill-container">
+                <div class="skill-chip">TypeScript</div>
+                <div class="skill-chip">StoryBook</div>
+              </div>
+            </div>
+          </div>
+        </article>
       </section>
 
       <section id="experience-section" class="section-container">
@@ -327,6 +371,7 @@
           </div>
         </article>
       </section>
+
       <section id="skill-section" class="section-container">
         <div class="section-title screen-animation">기술</div>
       </section>
